--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -99,3 +99,53 @@ h1::after {
 .back-button:hover {
     background-color: #FFA500; 
 }
+
+#loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 9999;
+    font-family: Arial, sans-serif;
+    color: #333;
+    text-align: center;
+    font-size: 21px;
+}
+
+.loading-spinner {
+    border: 10px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #E63946;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    animation: spin 1s linear infinite;
+    margin-bottom: 10px;
+}
+
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.separator-line {
+    border: none;
+    border-top: 3px solid #E63946;
+    margin: 15px 0;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
